<?xml version="1.0" encoding="utf-8"?>
<com.vkontakte.miracle.login.ValidationCodeFrame xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:padding="20dp"
    tools:background="@drawable/rounded_card">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/enterValidationCode"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusBottomEnd="@dimen/child_round"
        app:boxCornerRadiusTopEnd="@dimen/child_round"
        app:boxCornerRadiusBottomStart="@dimen/child_round"
        app:boxCornerRadiusTopStart="@dimen/child_round"
        app:boxStrokeColor="@color/primary_tinted_outlined_text_box_colors"
        android:textColorHint="?attr/colorEditTextHint"
        app:hintTextColor="?attr/colorSecondary"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/validationCodeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/validationCode"
            android:inputType="text"
            android:autofillHints="validationCode"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
            android:background="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.miracle.button.TextViewButton
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:text="@string/send"
        android:enabled="false"
        style="@style/TextButton.PrimaryButton"/>

    <com.miracle.button.TextViewButton
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/cancel"
        style="@style/TextButton.SecondaryButton"/>

    <LinearLayout
        android:id="@+id/validationCodeForceSMSHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/validationCodeForceSMSTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            tools:text="00:00"
            android:textColor="?attr/colorPrimary"
            android:visibility="gone"
            tools:visibility="visible"/>

        <com.miracle.button.TextViewButton
            android:id="@+id/validationCodeForceSMSButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ButtonTextAppearance"
            android:text="@string/forceValidationSMS"
            android:enabled="true"
            app:disable_auto_background="true"
            app:text_color="?attr/colorPrimary"
            app:disabled_text_color="?attr/colorPrimaryDisabled"/>
    </LinearLayout>

</com.vkontakte.miracle.login.ValidationCodeFrame>