<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarStyle="insideOverlay"
    android:scrollbarThumbVertical="@drawable/scroll_bar_drawable"
    android:scrollbars="vertical"
    android:clipToPadding="false"
    tools:background="?attr/colorBackgroundDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo_96_svg"
            app:tint="?attr/colorPrimary" />

        <FrameLayout
            android:id="@+id/frameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:background="@drawable/rounded_card"
            android:padding="@dimen/parent_padding">

            <LinearLayout
                android:id="@+id/loginFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/authorization"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    app:shapeAppearance="@style/ChildShapeAppearance"
                    app:boxStrokeColor="@color/primary_tinted_outlined_text_box_colors"
                    app:boxStrokeWidth="2dp"
                    android:textColorHint="?attr/colorEditTextHint"
                    app:hintTextColor="?attr/colorSecondary"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login"
                        android:inputType="textEmailAddress"
                        android:autofillHints="login"
                        android:textSize="16sp"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="15dp"
                        android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
                        android:background="@null" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    app:shapeAppearance="@style/ChildShapeAppearance"
                    app:boxStrokeColor="@color/primary_tinted_outlined_text_box_colors"
                    app:boxStrokeWidth="2dp"
                    android:textColorHint="?attr/colorEditTextHint"
                    app:hintTextColor="?attr/colorSecondary"
                    app:passwordToggleTint="?attr/colorEditTextHint"
                    app:boxBackgroundMode="outline"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:autofillHints="password"
                        android:imeOptions="actionGo"
                        android:textSize="16sp"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="15dp"
                        android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
                        android:background="@null" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.miracle.widget.ExtendedMaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="sign in"
                    android:enabled="false"
                    app:shapeAppearance="@style/ChildShapeAppearance"
                    style="@style/Button"/>

            </LinearLayout>

            <ViewStub
                android:id="@+id/validationCodeFrameStub"
                android:inflatedId="@+id/validationCodeFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/validation_code_stub"/>

            <ViewStub
                android:id="@+id/captchaCodeFrameStub"
                android:inflatedId="@+id/captchaCodeFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/captcha_code_stub"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:clipToPadding="false"
                android:layout_marginBottom="20dp"
                android:overScrollMode="never"
                tools:listitem="@layout/view_account_item"
                tools:itemCount="1"/>

            <LinearLayout
                android:id="@+id/login_process_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/loginProgress"
                    style="@android:style/Widget.Material.ProgressBar.Small"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:indeterminateTint="?attr/colorPrimary"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    tools:text="Доп. Информация"
                    tools:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

